<resources>
    <string name="app_name">Digital Library AstraTech</string>
    <string name="username_login_signup">Username </string>
    <string name="pass_login_signup">Password</string>
    <string name="pass_desc">At least one Uppercase, one number, one symbol</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Email</string>
    <string name="book_title">Book Title</string>
    <string name="book_author">Author</string>
    <string name="book_publisher">Publisher</string>
    <string name="book_author_detail">Publication Year</string>
    <string name="select">Select Prodi</string>
    <string name="sorry_there_are_no_results">Sorry, there are no results.</string>
    <string name="oopss_no_data_found">Oopss! No data found.</string>
    <string name="konfirmasi_tolak">Apakah anda yakin menolak pengajuan ?</string>
    <string name="konfirmasi_cancel">Apakah anda yakin membatalkan pengajuan ?</string>
    <string name="konfirmasi_title">Konfirmasi</string>
    <string name="konfirmasi_terima">Apakah anda yakin menerima pengajuan ?</string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>
</resources>