<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:id="@+id/fragment_try"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible"
        android:visibility="invisible"/>

    <!--    Ini image view untuk logo-->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="130dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_polman" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="30dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_login_signup"
                android:textColor="@color/white"
                android:textSize="15sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" *"
                android:textColor="@color/red"
                android:textSize="15sp" />
        </LinearLayout>

        <!-- Input Text untuk username -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLayoutUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="none"
            android:background="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:hintTextColor="#A1887F"
            app:startIconDrawable="@drawable/baseline_email_24"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_username_login"
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:boxStrokeWidth="0dp"
                android:background="@drawable/textbox"
                android:imeOptions="actionDone"
                android:textColor="@color/white"
                android:textColorHint="@android:color/transparent"
                android:textSize="17sp"
                tools:text="awdawd"
                android:textStyle="normal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass_login_signup"
                android:textColor="@color/white"
                android:textSize="15sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" *"
                android:textColor="@color/red"
                android:textSize="15sp" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="none"
            android:background="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:hintTextColor="#A1887F"
            app:passwordToggleDrawable="@drawable/password_toggle"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            app:startIconDrawable="@drawable/baseline_lock_24"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password_login"
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:boxStrokeWidth="0dp"
                android:background="@drawable/textbox"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@android:color/transparent"
                android:textSize="17sp"
                tools:text="IOOKEOK"
                android:textStyle="normal"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/cardview_light_background"
        android:fontFamily="@font/inter_variablefont_slnt_wght"
        android:paddingVertical="11dp"
        android:text="Sign In"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/inter_variablefont_slnt_wght"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="30dp"
        android:paddingVertical="11dp"
        android:layout_marginTop="10dp"
        android:text="Sign Up"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:backgroundTint="#1b262c"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn"/>

    <Button
        android:id="@+id/btnGuest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_variablefont_slnt_wght"
        android:layout_marginHorizontal="30dp"
        android:paddingVertical="11dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
        android:text="Login as Guest"
        android:textAllCaps="false"
        android:textColor="#000000 "
        android:backgroundTint="#bbe1fa" />

</androidx.constraintlayout.widget.ConstraintLayout>